# gdx-native

./: .gitignore  CMakeLists.txt  README.md  build-windows.bat  build.gradle  settings.gradle
backend/: build.gradle
backend/src/main/java/com/badlogic/gdx/assets/loaders/: CubemapLoaderEmu.java  TextureLoaderEmu.java
backend/src/main/java/com/badlogic/gdx/assets/loaders/resolvers/: ResolutionFileResolverEmu.java
backend/src/main/java/com/badlogic/gdx/files/: FileHandleEmu.java
backend/src/main/java/com/badlogic/gdx/graphics/: Pixmap.java  PixmapEmu.java  TextureDataEmu.java  TextureEmu.java
backend/src/main/java/com/badlogic/gdx/graphics/g2d/: Gdx2DPixmap.java  Gdx2DPixmapEmu.java  Gdx2DPixmapNative.java
backend/src/main/java/com/badlogic/gdx/graphics/glutils/: ETC1TextureDataEmu.java  FileTextureDataEmu.java  IndexArrayEmu.java  IndexBufferObjectEmu.java  InstanceBufferObjectEmu.java  VertexArrayEmu.java  VertexBufferObjectEmu.java  VertexBufferObjectWithVAOEmu.java
backend/src/main/java/com/badlogic/gdx/math/: Matrix4Emu.java
backend/src/main/java/com/badlogic/gdx/utils/: BufferUtilsEmu.java  SharedLibraryLoaderEmu.java
backend/src/main/java/com/badlogic/gdx/utils/async/: AsyncExecutorEmu.java  AsyncResultEmu.java  AsyncTaskEmu.java  ThreadUtilsEmu.java
backend/src/main/java/com/badlogic/gdx/utils/reflect/: Annotation.java  ClassReflectionEmu.java  ConstructorEmu.java  FieldEmu.java  FieldGen.java  MethodEmu.java
backend/src/main/java/dev/ultreon/gdx/c/: DefaultNativeInput.java  NativeApplication.java  NativeCallbacks.java  NativeClassLoader.java  NativeCursor.java  NativeFileHandle.java  NativeFiles.java  NativeGL32.java  NativeGraphics.java  NativeLauncher.java  NativeNativesLoader.java  NativeWindow.java
backend/src/main/java/dev/ultreon/gdx/c/audio/: Wav.java
backend/src/main/java/dev/ultreon/gdx/c/audio/mock/: MockAudio.java  MockAudioRecorder.java
backend/src/main/java/dev/ultreon/gdx/c/config/: AssetFileHandle.java  AssetFilter.java  AssetFilterOption.java  AssetType.java  AssetsCopy.java  DefaultAssetFilter.java  TeaBuildConfiguration.java  TeaBuilder.java  TeaVMResourceProperties.java
backend/src/main/java/dev/ultreon/gdx/c/config/plugins/: JavaObjectExporterDependency.java  TeaClassFilter.java  TeaClassTransformer.java  TeaPlugin.java  TeaReflectionSupplier.java
backend/src/main/java/dev/ultreon/gdx/c/glfw/: GLFW.java
backend/src/main/java/dev/ultreon/gdx/c/opengl/: OpenGL.java
backend/src/main/java/dev/ultreon/gdx/c/utils/: GenericTypeProvider.java
gradle/wrapper/: gradle-wrapper.properties
samples/: CMakeLists.txt  build-macos.sh  build-windows.bat  build.gradle
samples/src/main/java/dev/ultreon/gdx/c/samples/: Main.java  NativeBuilder.java
src/main/java/dev/ultreon/gdx/c/: Callback.java  GLFW.java  GLFWImage.java  GLUtil.java  Main.java  Memory.java  NativeApplication.java  NativeApplicationBase.java  NativeApplicationConfiguration.java  NativeApplicationLogger.java  NativeClipboard.java  NativeGL32.java  NativeGraphics.java  NativeInput.java  NativeNet.java  NativePreferences.java  NativeWindowAdapter.java  NativeWindowConfiguration.java  NativeWindowListener.java  OpenGL.java
src/main/java/dev/ultreon/gdx/c/audio/: JavaSoundAudioRecorder.java  NativeAudio.java  Ogg.java  OggInputStream.java  OpenALAudioDevice.java  OpenALMusic.java  OpenALNativeAudio.java  OpenALSound.java  OpenALUtils.java
src/main/java/dev/ultreon/gdx/c/audio/mock/: MockAudioDevice.java  MockMusic.java  MockSound.java
src/main/java/dev/ultreon/gdx/c/glfw/: GLFW.java
src/main/java/dev/ultreon/gdx/c/opengl/: OpenGL.java
